axum-debug/tests/fail/wrong_return_type.stderr
error[E0277]: the trait bound `bool: IntoResponse` is not satisfied
 --> tests/fail/wrong_return_type.rs:4:23
  |
4 | async fn handler() -> bool {
  |                       ^^^^ the trait `IntoResponse` is not implemented for `bool`
  |
note: required by a bound in `handler::{closure#0}::debug_handler`
 --> tests/fail/wrong_return_type.rs:4:23
  |
4 | async fn handler() -> bool {
  |                       ^^^^ required by this bound in `handler::{closure#0}::debug_handler`
